--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <label for="date-of-birth">Date Of Birth:</label>
       <input type="date" id="date-of-birth" />
       <label for="lucky-number">Lucky Number:</label>
-      <input type="number" id="lucky-number" placeholder="Enter a number" />
+      <input type="number" id="lucky-number" placeholder="Enter a number" min="1"/>
       <button id="calculate-number">Check Number</button>
       <p id="output-container"></p>
     </main>
